@@ -733,7 +733,9 @@ if((l= strlen(CWEBINPUTS))> max_file_name_length-2)too_long();
 strcpy(temp_file_name,CWEBINPUTS);
 #else
 l= 0;
-#endif 
+#endif
+#line 475 "common.w"
+ 
 }
 if(l> 0){
 if(k+l+2>=cur_file_name_end)too_long();
